--- a/www/index.html
+++ b/www/index.html
@@ -21,10 +21,10 @@
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/ion-autocomplete/dist/ion-autocomplete.min.css" type="text/css">
+  <script src="../plugins/cordova-camscanner/www/CordovaCamscanner.js"></script>
 
   <script src="lib/angular-translate/angular-translate.min.js"></script>
   <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
-
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
   <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
