[Add] Optimum Camera Resolution Plugin

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
   <link href="lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="lib/ion-autocomplete/dist/ion-autocomplete.min.css" type="text/css">
   <script src="../plugins/cordova-camscanner/www/CordovaCamscanner.js"></script>
+  <script src="../plugins/com.arungas.maximumResolution/www/maximumResolution.js"></script>
 
   <script src="lib/angular-translate/angular-translate.min.js"></script>
   <script src="lib/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js"></script>
